--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,10 @@
             <artifactId>protobuf-java</artifactId>
             <version>3.21.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>2.1.12.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
